fixing a hover flicker in the interaction-menu

--- a/modules/web/src/plugins/ballerina/interactions/interaction.scss
+++ b/modules/web/src/plugins/ballerina/interactions/interaction.scss
@@ -76,6 +76,7 @@
     float:left;
     background: #fff;
     overflow: visible;
+    margin-left: 1px;
 }
 
 .interaction-menu-area:hover .interaction-menu-item, .interaction-menu-area-clicked .interaction-menu-item {
